CLOSED FIXED174476
Fix style for name of class alloc function in WebVideoFullscreenInterfaceAVKit.
https://bugs.webkit.org/show_bug.cgi?id=174476
Summary Fix style for name of class alloc function in WebVideoFullscreenInterfaceAVKit.
Jeremy Jones
Reported 2017-07-13 15:46:27 PDT
Fix sytle for dynamic class creation function name in WebVideoFullscreenInterfaceAVKit.
Attachments
Patch (4.11 KB, patch)
2017-07-13 15:49 PDT, Jeremy Jones
no flags
Patch (4.22 KB, patch)
2017-07-13 18:40 PDT, Jeremy Jones
no flags
Jeremy Jones
Comment 1 2017-07-13 15:49:00 PDT
Jeremy Jones
Comment 2 2017-07-13 18:40:05 PDT
Alex Christensen
Comment 3 2017-07-14 08:39:43 PDT
Comment on attachment 315393 [details] Patch r=me WebAVPlayerLayerView_pictureInPicturePlayerLayerView should probably also be renamed to something with "alloc" in it.
WebKit Commit Bot
Comment 4 2017-07-14 13:17:22 PDT
Comment on attachment 315393 [details] Patch Clearing flags on attachment: 315393 Committed r219520: <http://trac.webkit.org/changeset/219520>
WebKit Commit Bot
Comment 5 2017-07-14 13:17:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.