Fix style for name of class alloc function in WebVideoFullscreenInterfaceAVKit. https://bugs.webkit.org/show_bug.cgi?id=174476

Patch by Jeremy Jones <jeremyj@apple.com> on 2017-07-14
Reviewed by Alex Christensen.

No new tests because no behavior change.

This is a rename for per style requirements.

* platform/ios/WebVideoFullscreenInterfaceAVKit.mm:
(allocWebAVPictureInPicturePlayerLayerViewInstance):
(WebAVPlayerLayerView_pictureInPicturePlayerLayerView):
(allocWebAVPlayerLayerViewInstance):
(WebVideoFullscreenInterfaceAVKit::setupFullscreen):
(getWebAVPictureInPicturePlayerLayerViewClass): Deleted.
(getWebAVPlayerLayerViewClass): Deleted.

Canonical link: https://commits.webkit.org/191342@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219520 268f45cc-cd09-0410-ab3c-d52691b4dbfc